src/test/compile-fail/match-vec-mismatch-2.rs
fn main() {
    match () {
        [()] => { } //~ ERROR mismatched types: expected `()` but found a vector pattern
    }
}
